--- a/source/interface/Madot.Interface.BlazorWebUI/Properties/launchSettings.json
+++ b/source/interface/Madot.Interface.BlazorWebUI/Properties/launchSettings.json
@@ -16,6 +16,7 @@
         "applicationUrl": "http://localhost:5258",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development",
+          "DEPLOY_TARGET": "Local",
           "DOTNET_ROOT_X64": "/usr/lib/dotnet"
         }
       },
@@ -26,6 +27,7 @@
         "applicationUrl": "https://localhost:7242;http://localhost:5258",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development",
+          "DEPLOY_TARGET": "Local",
           "DOTNET_ROOT_X64": "/usr/lib/dotnet"
         }
       }
