--- a/source/interface/Madot.Interface.BlazorWebUI/appsettings.Docker.json
+++ b/source/interface/Madot.Interface.BlazorWebUI/appsettings.Docker.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "BackendWebAPI": {
+    "InternalUrl": "http://madot-webapi:8080",
+    "PublicUrl": "http://localhost:5000"
   }
 }
