--- a/source/interface/Madot.Interface.WebAPI/Madot.Interface.WebAPI.csproj
+++ b/source/interface/Madot.Interface.WebAPI/Madot.Interface.WebAPI.csproj
@@ -9,11 +9,8 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="13.0.1" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.2" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
-        <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.7.0" />
-        <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.7.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
         <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.6.2" />
     </ItemGroup>
@@ -50,7 +47,7 @@
       <ProjectReference Include="..\..\infrastructure\Madot.Infrastructure.SqlServer\Madot.Infrastructure.SqlServer.csproj" />
     </ItemGroup>
     
-    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="$(Configuration)==Debug">
       <Exec Command="dotnet swagger tofile --output $(TargetDir)Madot-a-docs/openapi.json $(TargetPath) v1" WorkingDirectory="$(TargetDir)" />
       <Exec Command="cp $(TargetDir)Madot-a-docs/openapi.json $(ProjectDir)Madot-a-docs/" />
     </Target>
