--- a/source/interface/Madot.Interface.WebAPI/Properties/launchSettings.json
+++ b/source/interface/Madot.Interface.WebAPI/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5246",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_ENVIRONMENT": "Local",
         "DOTNET_ROOT_X64": "/usr/lib/dotnet"
       }
     },
@@ -27,7 +27,7 @@
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7055;http://localhost:5246",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_ENVIRONMENT": "Local",
         "DOTNET_ROOT_X64": "/usr/lib/dotnet"
       }
     }
