--- a/source/interface/Madot.Interface.CLI/Madot.Interface.CLI.csproj
+++ b/source/interface/Madot.Interface.CLI/Madot.Interface.CLI.csproj
@@ -28,6 +28,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="CommandHandlers\ApiVersion\" />
       <Folder Include="RestClient\" />
     </ItemGroup>
 
