--- a/source/interface/Madot.Interface.CLI/Madot.Interface.CLI.csproj
+++ b/source/interface/Madot.Interface.CLI/Madot.Interface.CLI.csproj
@@ -13,9 +13,11 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="JsonDiffPatch.Net" Version="2.3.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.7" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Polly.Contrib.WaitAndRetry" Version="1.1.1" />
       <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
       <PackageReference Include="Refit" Version="7.1.2" />
@@ -28,7 +30,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="CommandHandlers\ApiVersion\" />
       <Folder Include="RestClient\" />
     </ItemGroup>
 
