--- a/source/interface/Madot.Interface.CLI/Madot.Interface.CLI.csproj
+++ b/source/interface/Madot.Interface.CLI/Madot.Interface.CLI.csproj
@@ -6,23 +6,24 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AssemblyName>madot</AssemblyName>
+        <PublishAot>true</PublishAot>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="ConsoleAppFramework" Version="5.2.1">
+      <PackageReference Include="ConsoleAppFramework" Version="5.2.4">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="JsonDiffPatch.Net" Version="2.3.0" />
-      <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
-      <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.7" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.10" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Polly.Contrib.WaitAndRetry" Version="1.1.1" />
       <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
-      <PackageReference Include="Refit" Version="7.1.2" />
-      <PackageReference Include="Refit.HttpClientFactory" Version="7.1.2" />
-      <PackageReference Include="ZLogger" Version="2.5.3" />
+      <PackageReference Include="Refit" Version="8.0.0" />
+      <PackageReference Include="Refit.HttpClientFactory" Version="8.0.0" />
+      <PackageReference Include="ZLogger" Version="2.5.7" />
     </ItemGroup>
 
     <ItemGroup>
