--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /source/interface/Madot.Interface.BlazorWebApp/Madot.Interface.BlazorWebApp.csproj.user
 /source/interface/Madot.Interface.API/Madot.Interface.API.csproj.user
 
+/Madot.sln.DotSettings.user
